# rules_lint

./: MODULE.bazel
example/: MODULE.bazel
example/src/: BUILD.bazel
example/tools/format/: BUILD.bazel
example/tools/lint/: BUILD.bazel  linters.bzl
