"Bazel dependencies"

bazel_dep(name = "aspect_rules_lint", version = "0.0.0")
# bazel_dep(name = "aspect_bazel_lib", version = "2.7.7")
bazel_dep(name = "toolchains_llvm", version = "0.10.3")

local_path_override(
    module_name = "aspect_rules_lint",
    path = "..",
)

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_versions = {
        "": "16.0.0",
        "darwin-x86_64": "15.0.7",
    },
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")
